force-app/main/default/objects/Journal__c/Journal__c.object-meta.xml
<CustomObject>
    <label>Journal</label>
    <nameField>
        <displayFormat>Entry - {000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>