force-app/main/default/objects/Journal__c/fields/Balance__c.field-meta.xml
<CustomField>
        <fullName>Balance__c</fullName>
        <formula>Debit__c - Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>