force-app/main/default/objects/Journal__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
        <fullName>Created_By_User__c</fullName>
        <formula>IF( DSI_Created_By__c != null , DSI_Created_By__c, CreatedBy.FirstName + ' ' + CreatedBy.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By User</label>
        <type>Text</type>
    </CustomField>