force-app/main/default/objects/Journal__c/fields/Credit__c.field-meta.xml
<CustomField>
        <fullName>Credit__c</fullName>
        <description>Amount if this is a credit</description>
        <label>Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>