force-app/main/default/objects/Journal__c/fields/Debit__c.field-meta.xml
<CustomField>
        <fullName>Debit__c</fullName>
        <description>Amount if this item is a debit</description>
        <label>Debit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>