force-app/main/default/objects/Journal__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Delivery_Address__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </CustomField>