force-app/main/default/objects/Journal__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <description>Short description of this item</description>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>