force-app/main/default/objects/Journal__c/fields/DSI_Batch_Number__c.field-meta.xml
<CustomField>
        <fullName>DSI_Batch_Number__c</fullName>
        <label>DSI Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>