force-app/main/default/objects/Journal__c/fields/DSI_Trans_Num__c.field-meta.xml
<CustomField>
        <fullName>DSI_Trans_Num__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Number of transaction from DSI</description>
        <externalId>true</externalId>
        <label>DSI Trans Num</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>