force-app/main/default/objects/Journal__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date the item was entered</description>
        <label>Entry Date</label>
        <type>Date</type>
    </CustomField>