force-app/main/default/objects/Journal__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>