force-app/main/default/objects/Journal__c/fields/NIE_Applied__c.field-meta.xml
<CustomField>
        <fullName>NIE_Applied__c</fullName>
        <label>NIE Applied</label>
        <type>Date</type>
    </CustomField>