force-app/main/default/objects/Journal__c/fields/Publication__c.field-meta.xml
<CustomField>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </CustomField>