force-app/main/default/objects/Journal__c/fields/Recurly_Transaction__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurly Transaction</label>
        <referenceTo>recurly_v2__Recurly_Transaction__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </CustomField>